k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oraiscan-frontend
  labels:
    app: oraiscan-frontend
spec:
  selector:
    matchLabels:
      app: oraiscan-frontend
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: oraiscan-frontend
    spec:
      containers:
      - name: oraiscan-frontend
        image: thao1996/oraiscan-frontend:73755a71bcdf73eb7932ce5cbb631b5e24a3297d
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
